Coverity analysis defect 175623: Data race condition

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-08-18
    • 🟥 DDL
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/4f6a63b49e3bc2b19580469b9ae1fa2a/bazel_cache/c6c276818191528edadb354cb30d354d/execroot/_main/src/mongo/db/s/sharding_ddl_coordinator.h:377: MISSING_LOCK 175623 Accessing "this->this->_doc" without holding lock "mongo::ShardingDDLCoordinatorImpl<mongo::DropIndexesCoordinatorDocument>._docMutex". Elsewhere, "mongo::ShardingDDLCoordinatorImpl<mongo::DropIndexesCoordinatorDocument>._doc" is written to with "ShardingDDLCoordinatorImpl._docMutex" held 3 out of 3 times.

            Assignee:
            Silvia Surroca
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: