SERVER-108430 Coverity analysis defect 175623: Data race condition (#39686)

GitOrigin-RevId: c76cd0d4597d67c2e5e1144da8c4d0493c29d963